--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -1197,6 +1197,7 @@ license.
 
 It is a pleasure to thank
 Kevin Covey (WWU),
+Marla Geha (Yale),
 Marina Kounkel (WWU),
 Keith Hawkins (Columbia),
 Melissa Ness (Columbia/Flatiron),
