--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -106,7 +106,7 @@
 Ave, Tucson, AZ 85719}
 
 \author{Nicholas Troup}
-\affiliation{}
+\affiliation{Department of Physics, Salisbury University, Salisbury, MD 21801}
 
 % Other APOGEE co-authors:
 \author{Jos\'e G. Fern\'andez-Trincado}
