--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2018-03-27 09:58:10 -0400 
+%% Created for Adrian Price-Whelan at 2018-04-02 15:06:34 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Bianchi:2011,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2011Ap%26SS.335..161B},
+	Author = {{Bianchi}, L. and {Herald}, J. and {Efremova}, B. and {Girardi}, L. and {Zabot}, A. and {Marigo}, P. and {Conti}, A. and {Shiao}, B.},
+	Date-Added = {2018-04-02 19:06:32 +0000},
+	Date-Modified = {2018-04-02 19:06:33 +0000},
+	Doi = {10.1007/s10509-010-0581-x},
+	Journal = {\apss},
+	Keywords = {Astronomical Data Bases: catalogues, Stars: white dwarfs, Stars: evolution, Galaxy: stellar content, Ultraviolet: stars, Galaxies: Milky Way},
+	Month = sep,
+	Pages = {161-169},
+	Title = {{GALEX catalogs of UV sources: statistical properties and sample science applications: hot white dwarfs in the Milky Way}},
+	Volume = 335,
+	Year = 2011,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1007/s10509-010-0581-x}}
 
 @article{2005ApJ...620..970M,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
