--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -85,7 +85,7 @@
 % APOGEE RV var co-authors
 \author{Nathan De Lee}
 \affiliation{Department of Physics, Geology, and Engineering Technology, Northern Kentucky Univerity, Highland Heights, KY 41099}
-\affiliation{Department of Physics & Astronomy, Vanderbilt University, Nashville, TN 37235}
+\affiliation{Department of Physics \& Astronomy, Vanderbilt University, Nashville, TN 37235}
 
 \author{Steven R. Majewski}
 \affiliation{Department of Astronomy, University of Virginia, Charlottesville, VA 22904-4325, USA}
