remove fig fix ref to ting

--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2018-04-02 15:06:34 -0400 
+%% Created for Adrian Price-Whelan at 2018-04-06 14:11:31 -0400
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
+
+@article{Ting:2018,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180306650T},
+	Archiveprefix = {arXiv},
+	Author = {{Ting}, Y.-S. and {Hawkins}, K. and {Rix}, H.-W.},
+	Date-Added = {2018-04-06 18:11:28 +0000},
+	Date-Modified = {2018-04-06 18:11:30 +0000},
+	Eprint = {1803.06650},
+	Journal = {ArXiv e-prints},
+	Keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+	Month = mar,
+	Primaryclass = {astro-ph.SR},
+	Title = {{A large and pristine sample of standard candles across the Milky Way: \~{}100,000 red clump stars with 3\% contamination}},
+	Year = 2018}
 
 @article{Bianchi:2011,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
