--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -103,8 +103,9 @@ Ave, Tucson, AZ 85719}
 \author{Jos\'e G. Fern\'andez-Trincado}
 \affiliation{Departamento de Astronom\'ia, Universidad de Concepci\'on, Casilla 160-C, Concepci\'on, Chile}
 
-\author{Domingo An\'ibal Garc\'ia-Hern\'andez}
-\affiliation{Instituto de Astrof\'isica de Canarias, 38205 La Laguna, Tenerife, Spain}
+\author{Domingo A. Garc\'ia-Hern\'andez}
+\affiliation{Instituto de Astrof\'isica de Canarias (IAC), E-38205 La Laguna, Tenerife, Spain}
+\affiliation{Universidad de La Laguna (ULL), Departamento de Astrof\'isica, E-38206 La Laguna, Tenerife, Spain}
 
 \author{Pen\'elope Longa-Pe\~na}
 \affiliation{Unidad de Astronom\'ia, Universidad de Antofagasta, Avenida Angamos 601, Antofagasta 1270300, Chile}
@@ -112,8 +113,13 @@ Ave, Tucson, AZ 85719}
 \author{Christian Nitschelm}
 \affiliation{Unidad de Astronom\'ia, Universidad de Antofagasta, Avenida Angamos 601, Antofagasta 1270300, Chile}
 
+\author{Jennifer Sobeck}
+\affiliation{Department of Astronomy, University of Washington, Box 351580,
+Seattle, WA 98195, USA}
+
 \author{Olga Zamora}
-\affiliation{Instituto de Astrof\'isica de Canarias, 38205 La Laguna, Tenerife, Spain}
+\affiliation{Instituto de Astrof\'isica de Canarias (IAC), E-38205 La Laguna, Tenerife, Spain}
+\affiliation{Universidad de La Laguna (ULL), Departamento de Astrof\'isica, E-38206 La Laguna, Tenerife, Spain}
 
 \begin{abstract}\noindent % trust me
 % Context
@@ -1196,10 +1202,13 @@ Melissa Ness (Columbia/Flatiron),
 David Spergel (Princeton/Flatiron),
 and Yuan-Sen Ting (Princeton).
 
+DWH was partially supported by the NSF (grant AST-1517237).
 HWR acknowledges support by Sonderforschungsbereich SFB 881 (A3) of the German
 Research Foundation (DFG), and from the European Research Council under the
 European Union’s Seventh Framework Programme (FP 7) ERC Grant Agreement
 n. [321035].
+DAGH and OZ acknowledge support provided by the Spanish Ministry of Economy and
+Competitiveness (MINECO) under grant AYA-2017-88254-P.
 
 Funding for the Sloan Digital Sky Survey IV has been provided by the Alfred P. Sloan Foundation, the U.S. Department of Energy Office of Science, and the Participating Institutions. SDSS-IV acknowledges
 support and resources from the Center for High-Performance Computing at
