intro copy pasta

--- a/paper/2-population/twoface-pop.tex
+++ b/paper/2-population/twoface-pop.tex
@@ -141,6 +141,32 @@ for ZZZ and WWW.
 
 \section{Introduction} \label{sec:intro}
 
+Stars typically have companions.
+Main sequence stars in the solar neighborhood more often appear in binary or
+multiple star systems rather than as solitary stars (e.g.,
+\citealt{Duquennoy:1991,Raghavan:2010,Tokovinin:2014,Moe:2017}).
+This is likely a generic outcome of star formation, as, for example turbulent
+fragmentation in collapsing protostellar clouds can produce stellar multiplets
+within length-scales comparable to their spheres of influence (e.g.,
+\citealt{Raskutti:2016}).
+Binary and multiple star systems are therefore of great interest in
+astrophysics: The population of stars and their companions encodes information
+about star formation processes, stellar parameters and evolution, and the
+dynamics of multi-body systems (for recent reviews, see
+\citealt{Duchene:2013,Moe:2017}).
+
+Most of what is known about stellar companions comes from studies of
+nearby main-sequence (MS) stars.
+Nearly 50\% of MS stars in the solar neighborhood have companions
+(e.g., \citealt{Tokovinin:2014}).
+MS stars with companions have a large dynamic range of constituent and orbital
+characteristics.
+For example, binary stars have mass-ratios that span from $\approx 0.03$
+to 1 (e.g., \citealt{Kraus:2008}), and have periods from days to
+millions of years (e.g., \citealt{Raghavan:2010}).
+Less is known about population properties of non-interacting or detached
+companions to evolved stars.
+
 APW: Opening sentence: Even with one single star and two epochs, if we
 see an RV change, there must be binaries! What more can we say? Can we
 infer binary populations from bad data?
