--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -183,7 +183,7 @@ study multiplicity (e.g., $\textrm{RV}_\textrm{max}$; \citealt{Badenes:2017}).
 
 If there are only a few radial-velocity epochs per star, and if the companion
 spectrum is not observed, the data will be consistent with many different
-combinations of (primary) orbital parameters (period, amplitude, eccentricity,
+combinations of primary orbital parameters (period, amplitude, eccentricity,
 etc.).
 To identify companions to the typical star observed in a spectroscopic survey,
 we therefore face at least one major challenge: how, given a small number of
@@ -1207,6 +1207,8 @@ HWR acknowledges support by Sonderforschungsbereich SFB 881 (A3) of the German
 Research Foundation (DFG), and from the European Research Council under the
 European Union’s Seventh Framework Programme (FP 7) ERC Grant Agreement
 n. [321035].
+PL was partly funded by "Programa de Iniciaci\'on en Investigaci\'on –
+Universidad de Antofagasta."
 DAGH and OZ acknowledge support provided by the Spanish Ministry of Economy and
 Competitiveness (MINECO) under grant AYA-2017-88254-P.
 
