--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -1206,6 +1206,8 @@ Keith Hawkins (Columbia),
 Melissa Ness (Columbia/Flatiron),
 David Spergel (Princeton/Flatiron),
 and Yuan-Sen Ting (Princeton).
+We thank the anonymous referee for constructive comments that improved this
+manuscript.
 
 DWH was partially supported by the NSF (grant AST-1517237).
 HWR acknowledges support by Sonderforschungsbereich SFB 881 (A3) of the German
