--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -1195,6 +1195,7 @@ are available online.\footnote{\url{http://adrian.pw/twoface.html}}
 The source code for this project is open source and available from
 \url{https://github.com/adrn/TwoFace} under the MIT open source software
 license.
+This paper version was generated with Git commit \texttt{\githash\,(\gitdate)}.
 
 \acknowledgements
 
