Ref tidal circ paper

--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -7,6 +7,20 @@
 
 %% Saved with string encoding Unicode (UTF-8)
 
+@ARTICLE{Circularization:2018,
+   author = {{Price-Whelan}, A.~M. and {Goodman}, J.},
+    title = "{Binary companions of evolved stars in APOGEE DR14: Orbital circularization}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1804.06841},
+ primaryClass = "astro-ph.SR",
+ keywords = {Astrophysics - Solar and Stellar Astrophysics},
+     year = 2018,
+    month = apr,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180406841P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @article{Ting:2018,
