--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -881,7 +881,8 @@ orbits appear to be circular, but between 10--100~days there appears to be a
 gradual decrease in eccentricity rather than a sharp transition.
 This is likely because the primary stars in this sample have a large range in
 surface gravities and therefore a large range in stellar radii (see lower right
-panel).
+panel); this result is explored in more detail in companion work
+(\citealt{Circularization:2018}).
 
 In the lower left panel of \figurename~\ref{fig:logg-teff-p-e}, the diagonal
 (thick) line shows the orbital period of a hypothetical massless companion at
